--- a/Vuex/.gitignore
+++ b/Vuex/.gitignore
@@ -1,7 +1,7 @@
 .DS_Store
 node_modules
-/dist
-
+dist
+package-lock.json
 
 # local env files
 .env.local
@@ -11,7 +11,6 @@ node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
 
 # Editor directories and files
 .idea
@@ -21,3 +20,6 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+
+# User notes
+notes.md
