--- a/Vuex/package.json
+++ b/Vuex/package.json
@@ -28,7 +28,9 @@
     "webpack-dev-server": "^3.9.0"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "vue": "^2.6.10",
+    "vue-axios": "^3.2.4",
     "vue-router": "^3.5.1",
     "vuetify": "^2.1.7",
     "vuex": "^3.1.1"
