--- a/django/docker-compose.yml
+++ b/django/docker-compose.yml
@@ -1,11 +1,12 @@
-version: '3.7'
+version: "3.7"
 
 services:
   web:
     build: ./app
-    command: python manage.py runserver 0.0.0.0:8000
-    # command: python manage.py makemigrate
+    restart: always
     # command: python manage.py makemigrations
+    # command: python manage.py migrate
+    command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - ./app/:/usr/src/app/
     ports:
