--- a/Vuex/package.json
+++ b/Vuex/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "vue": "^2.6.10",
+    "vue-class-component": "^7.2.6",
     "vue-router": "^3.5.1",
     "vuetify": "^2.1.7",
     "vuex": "^3.1.1"
