--- a/Vuex/tsconfig.json
+++ b/Vuex/tsconfig.json
@@ -11,7 +11,8 @@
     "noLib": false,
     "sourceMap": true,
     "strict": true,
-    "suppressImplicitAnyIndexErrors": true
+    "suppressImplicitAnyIndexErrors": true,
+    "experimentalDecorators": true
   },
   "compileOnSave": false
 }
