--- a/Vuex/package.json
+++ b/Vuex/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jsdaycan19-vuex-ts",
+  "name": "project",
   "version": "1.0.0",
   "description": "## Project setup",
   "main": "main.ts",
