--- a/Vuex/package.json
+++ b/Vuex/package.json
@@ -32,6 +32,7 @@
     "vue": "^2.6.10",
     "vue-axios": "^3.2.4",
     "vue-class-component": "^7.2.6",
+    "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.5.1",
     "vuetify": "^2.1.7",
     "vuex": "^3.1.1"
