comments, store fixes, removing unused components and products improvements

--- a/Vuex/tsconfig.json
+++ b/Vuex/tsconfig.json
@@ -12,6 +12,7 @@
     "sourceMap": true,
     "strict": true,
     "suppressImplicitAnyIndexErrors": true,
+    "strictPropertyInitialization": false,
     "experimentalDecorators": true
   },
   "compileOnSave": false
