--- a/django/docker-compose.yml
+++ b/django/docker-compose.yml
@@ -4,13 +4,13 @@ services:
   web:
     build: ./app
     restart: always
-    command: python manage.py makemigrations
+    # command: python manage.py makemigrations
     # command: python manage.py migrate
-    # command: python manage.py runserver 0.0.0.0:8000
+    command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - ./app/:/usr/src/app/
     ports:
-      - 8001:8000
+      - 8000:8000
     env_file:
       - ./.env
     depends_on:
